[project]
name = "pytestmate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
    "pathspec>=0.12.1",
    "pytest>=8.3.5",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.setuptools.package-data]
"app.templates" = ["python.gitignore"]
